[package]
name = "capture"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "extractor"
path = "src/bin/extractor.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.2"
tree-sitter = "0.20"
tree-sitter-java = "0.20"
tree-sitter-c-sharp = "0.20"
